--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,25 +35,25 @@
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                   <div class="flex-container">
                     <div class="flex-block flex-grow-1">
-                        <a href="https://anastasiiafrontend.github.io/ArkeneaProject/index.html" class="project-title">-view demo-</a>
+                        <a href="https://amyronenko.github.io/ArkeneaProject/index.html" class="project-title">-view demo-</a>
                         <div class="card">
-                        <a class="card-link" href="https://anastasiiafrontend.github.io/ArkeneaProject/index.html"></a>
+                        <a class="card-link" href="https://amyronenko.github.io/ArkeneaProject/index.html"></a>
                         <img class="card-img" src="images/Arkenea.jpg" alt="">
                       </div>
                         <div class="shadow"></div>
                         <div class="shadow-content">
-                            <a class="link" href="https://anastasiiafrontend.github.io/ArkeneaProject/index.html">view demo</a>
+                            <a class="link" href="https://amyronenko.github.io/ArkeneaProject/index.html">view demo</a>
                         </div>
                     </div>
                     <div class="flex-block flex-grow-2">
-                        <a href="https://anastasiiafrontend.github.io/CDS/index.html" class="project-title">-view demo-</a>
+                        <a href="amyronenko.github.io/CDS/index.html" class="project-title">-view demo-</a>
                       <div class="card">
-                      <a class="card-link" href="https://anastasiiafrontend.github.io/CDS/index.html"></a>
+                      <a class="card-link" href="amyronenko.github.io/CDS/index.html"></a>
                         <img class="card-img" src="images/cds_02.jpg" alt="">
                       </div>
                         <div class="shadow"></div>
                         <div class="shadow-content">
-                            <a class="link" href="https://anastasiiafrontend.github.io/CDS/index.html">view demo</a>
+                            <a class="link" href="amyronenko.github.io/CDS/index.html">view demo</a>
                         </div>
                     </div>
                   </div>
