--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -132,7 +132,7 @@
                       </div>
                         <div class="shadow"></div>
                         <div class="shadow-content">
-                            <a class="link" href="https://amyronenko.github.io/Monticello/index.html">coming soon</a>
+                            <a class="link" href="https://amyronenko.github.io/Monticello/index.html">view demo</a>
                         </div>
                     </div>
                     <div class="flex-block flex-grow-1">
