--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -122,7 +122,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invisible">
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                   <div class="flex-container">
                     <div class="flex-block flex-grow-1">
                         <a href="https://amyronenko.github.io/Monticello/index.html" class="project-title">-view demo-</a>
@@ -135,7 +135,7 @@
                             <a class="link" href="https://amyronenko.github.io/Monticello/index.html">view demo</a>
                         </div>
                     </div>
-                    <div class="flex-block flex-grow-1">
+                    <div class="flex-block flex-grow-1 invisible">
                       <div class="card">
                         <a class="card-link" href=""></a>
                         <img class="card-img" src="images/empty.jpg" alt="">
