--- a/ArkeneaProject/index.html
+++ b/ArkeneaProject/index.html
@@ -105,7 +105,9 @@
              </figure>
               <div class="card-description indent-x">
               <p class="module-pictures-content">
-              <p>Canvsly featured on TechCrunch and winner of the Kiip Build Fund 2013 and Mom’s Choice Awards.</p> 
+              <p class="pic-content">Canvsly featured on TechCrunch</p>
+                  <p class="pic-content"> and winner of the Kiip Build Fund 2013</p>
+                  <p class="pic-content">and Mom’s Choice Awards.</p>
               </p>
               <a class="link" href="#!">Continue reading...</a>
              </div>
