change html in Arkenea

--- a/ArkeneaProject/index.html
+++ b/ArkeneaProject/index.html
@@ -90,9 +90,7 @@
                 </figure>
                 <div class="card-description indent-x">
                   <p class="module-pictures-content">
-                  <p class="pic-content">Sleep Easily downloaded over</p>
-                  <p class="pic-content"> 400,000 times – generating</p>
-                  <p class="pic-content">consistent revenues.</p>
+                  <p class="pic-content">Sleep Easily downloaded over 400,000 times – generating consistent revenues.</p>
                   </p>
                   <a href="#!" class="link">Continue reading...</a>
                 </div> 
@@ -105,9 +103,8 @@
              </figure>
               <div class="card-description indent-x">
               <p class="module-pictures-content">
-              <p class="pic-content">Canvsly featured on TechCrunch</p>
-                  <p class="pic-content"> and winner of the Kiip Build Fund 2013</p>
-                  <p class="pic-content">and Mom’s Choice Awards.</p>
+                  <p class="pic-content">Canvsly featured on TechCrunch and winner of the Kiip Build Fund 2013 and
+                  Mom’s Choice Awards.</p>
               </p>
               <a class="link" href="#!">Continue reading...</a>
              </div>
@@ -119,11 +116,7 @@
                 <img class="card-img" src="images/pic_08.jpg" alt="">
              </figure>
              <div class="card-description indent-x">
-                <p class="module-pictures-content">
-                <p>Glenn Harrold, celebrity</p>
-                <p>hypnotherapist, crosses 2 million</p>   
-                <p>downloads for his apps.</p> 
-                </p>
+                <p class="pic-content">Glenn Harrold, celebrity hypnotherapist, crosses 2 million downloads for his apps.</p>
                  <a class="link" href="#!">Continue reading...</a>
               </div> 
             </div>
