change in Eventtro

--- a/eventtro/index.html
+++ b/eventtro/index.html
@@ -334,7 +334,7 @@
                       </a>
                     </div>
                  </div>
-               <img src="images/new_cup.jpg" alt="">
+               <img src="images/pic11_38.jpg" alt="">
              </div>
           </div>
         </div>
