change in Eventtro

--- a/eventtro/index.html
+++ b/eventtro/index.html
@@ -298,7 +298,7 @@
           </div>
          </div>
         <div class="row row-padding">
-          <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 pic-padding card-hide">
+          <div class="img-wrap col-xs-12 col-sm-5 col-md-5 col-lg-5 pic-padding card-hide">
              <div class="wide-grid-card">
                  <div class="shadow-light"></div>
                  <div class="shadow-blue-wrapper">
@@ -311,7 +311,7 @@
                  <img src="images/new2_03.jpg" alt="">
               </div>
           </div>
-          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 pic-padding ">
+          <div class="img-wrap col-xs-12 col-sm-4 col-md-4 col-lg-4 pic-padding ">
             <div class="wide-grid-card">
                <div class="shadow-light"></div>
                 <div class="shadow-blue-wrapper">
@@ -324,7 +324,7 @@
                <img src="images/pic10_35.jpg" alt="">
              </div>
           </div>
-          <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pic-padding card-hide">
+          <div class="img-wrap col-xs-12 col-sm-3 col-md-3 col-lg-3 pic-padding card-hide">
             <div class="wide-grid-card">
                <div class="shadow-light"></div>
                 <div class="shadow-blue-wrapper">
@@ -339,7 +339,7 @@
           </div>
         </div>
         <div class="row row-padding"> 
-          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 pic-padding card-hide">
+          <div class="img-wrap col-xs-12 col-sm-4 col-md-4 col-lg-4 pic-padding card-hide">
             <div class="wide-grid-card">
                  <div class="shadow-light"></div>
                   <div class="shadow-blue-wrapper">
@@ -352,7 +352,7 @@
                  <img src="images/table_09.jpg" alt="">
           </div>
           </div>
-          <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 pic-padding card-hide">
+          <div class="img-wrap col-xs-12 col-sm-5 col-md-5 col-lg-5 pic-padding card-hide">
             <div class="wide-grid-card">
                <div class="shadow-light"></div>
                 <div class="shadow-blue-wrapper">
@@ -365,7 +365,7 @@
                <img src="images/pic13_45.jpg" alt="">
           </div>
           </div>
-          <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pic-padding card-hide">
+          <div class="img-wrap col-xs-12 col-sm-3 col-md-3 col-lg-3 pic-padding card-hide">
              <div class="wide-grid-card">
                  <div class="shadow-light"></div>
                   <div class="shadow-blue-wrapper">
