--- a/eventtro/index.html
+++ b/eventtro/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
   <title>Eventtro</title>
   <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
   <link rel="stylesheet" href="styles/reset.css">
