--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -156,7 +156,9 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
               <div class="footer-contacts">
-                  <img class="photo" src="images/photo5231044174395058359.jpg" alt="">
+                  <div class="photo-wrap">
+                      <img class="photo" src="images/photo5231044174395058359.jpg" alt="">
+                  </div>
                 <div class="footer-contact-wrapper">
                   <div class="footer-contact e-mail">
                       <a href="https://myaccount.google.com/?utm_source=OGB&utm_medium=app">
