change in portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -157,7 +157,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
               <div class="footer-contacts">
                   <div class="photo-wrap">
-                      <img class="photo" src="images/photo5231044174395058359.jpg" alt="">
+                      <img class="photo" src="images/Brfz6DPYoNQ_03.jpg" alt="">
                   </div>
                 <div class="footer-contact-wrapper">
                   <div class="footer-contact e-mail">
