change in facility

--- a/Facility/index.html
+++ b/Facility/index.html
@@ -68,7 +68,7 @@
       </div>
     </header>
     <main>
-      <div class="container hidden-lg block-margin">
+      <div class="mini-slider container hidden-lg block-margin">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 center">
             <h2 class="block-margin">MINI SLIDER</h2>
