--- a/Facility/index.html
+++ b/Facility/index.html
@@ -87,6 +87,11 @@
                     <!-- Add Arrows -->
                     <div class="swiper-button-next_s_2"></div>
                     <div class="swiper-button-prev_s_2"></div>
+                    <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets">
+                        <span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span>
+                        <span class="swiper-pagination-bullet"></span>
+                        <span class="swiper-pagination-bullet"></span>
+                    </div>
                 </div>
             </div>
           </div>
