change in facility

--- a/Facility/index.html
+++ b/Facility/index.html
@@ -108,10 +108,12 @@
                     <div class="mini-slider">
                         <!-- Swiper -->
                         <div class="swiper-container s_3">
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide"><img class="img-mini" src="images/slider3.jpg"></div>
-                                <div class="swiper-slide"><img class="img-mini" src="images/desktop2_05.jpg"></div>
-                                <div class="swiper-slide"><img class="img-mini" src="images/slider.jpg"></div>
+                            <div class="wrap">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide"><img class="img-mini" src="images/slider3.jpg"></div>
+                                    <div class="swiper-slide"><img class="img-mini" src="images/desktop2_05.jpg"></div>
+                                    <div class="swiper-slide"><img class="img-mini" src="images/slider.jpg"></div>
+                                </div>
                             </div>
                             <!-- Add Arrows -->
                             <div class="swiper-button-next_s_3"></div>
