--- a/Monticello/index.html
+++ b/Monticello/index.html
@@ -20,15 +20,15 @@
   <header class="header">
     <div class="container">
       <div class="row center-xs middle-xs center-lg">
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 flex">
+        <div class="wrap col-xs-12 col-sm-12 col-md-3 col-lg-3 flex">
           <div class="logo"></div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 last-sm col-padding">
-          <ul class="social-networks list">
-          <li class="s-network fb"><a href=""></a></li>
-          <li class="s-network tw"><a href=""></a></li>
-          <li class="s-network ig"><a href=""></a></li>
-        </ul>
+          <ul class="wrap social-networks list">
+            <li class="s-network fb"><a href=""></a></li>
+            <li class="s-network tw"><a href=""></a></li>
+            <li class="s-network ig"><a href=""></a></li>
+          </ul>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
               <nav>
