--- a/ArkeneaProject/index.html
+++ b/ArkeneaProject/index.html
@@ -160,8 +160,10 @@
               <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 padding">
               <form class="form">
                   <p class="form-header">Contact us</p>
-                  <input class='form-control form-input' type="" name="" placeholder="*Name">
-                  <input class='form-control form-input' type="" name="" placeholder="*Your Email Address">
+                  <div class="wrap">
+                      <input class='form-control form-input' type="" name="" placeholder="*Name">
+                      <input class='form-control form-input' type="" name="" placeholder="*Your Email Address">
+                  </div>
                   <textarea class='form-control form-textarea' type="" cols="55" rows="5" name="" placeholder="*Your Message"></textarea>
                   <button class="btn form-btn">Submit</button>
               </form>
