change in monticello

--- a/ArkeneaProject/index.html
+++ b/ArkeneaProject/index.html
@@ -42,9 +42,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
               <div class="banner-content">
                 <div class="h1-cover">
-                 <div class="h1">Technical Cofounders </div>
-                 <div class="h1">to your Mobile &#38;</div>
-                 <div class="h1">Web Startup</div>
+                 <div class="h1">Technical Cofounders to your Mobile &#38; Web Startup</div>
                 </div>
                 <article class="header-content">
                  <p class="article-content">To build a successful app, you need a smart</p>
