--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -138,7 +138,7 @@
                     <div class="flex-block flex-grow-1 invisible">
                       <div class="card">
                         <a class="card-link" href=""></a>
-                        <img class="card-img" src="images/empty.jpg" alt="">
+                        <img class="card-img empty" src="images/empty.jpg" alt="">
                       </div>
                         <div class="shadow"></div>
                         <div class="shadow-content">
@@ -156,7 +156,9 @@
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
               <div class="footer-contacts">
-                  <img class="photo" src="images/me_04.jpg" alt="">
+                  <div class="wrap">
+                      <img class="photo" src="images/otKatky.jpg" alt="">
+                  </div>
                 <div class="footer-contact-wrapper">
                   <div class="footer-contact e-mail">
                       <a href="https://myaccount.google.com/?utm_source=OGB&utm_medium=app">
