--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,7 @@
                         <a href="https://amyronenko.github.io/CDS/index.html" class="project-title">-view demo-</a>
                       <div class="card">
                       <a class="card-link" href="https://amyronenko.github.io/CDS/index.html"></a>
-                        <img class="card-img" src="images/cds_02.jpg" alt="">
+                        <img class="card-img cds-project" src="images/cds_02.jpg" alt="">
                       </div>
                         <div class="shadow"></div>
                         <div class="shadow-content">
