--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@
       <header>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 mobile-center">
                 <div class="h-wrapper"> 
                   <div class="h1">Anastasiia Myronenko</div>
                   <div class="h2">front end developer</div>
@@ -32,7 +32,7 @@
        <main>
         <div class="container">
           <div class="row"> 
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 mobile-center">
                   <div class="flex-container">
                     <div class="flex-block flex-grow-1">
                         <a href="https://amyronenko.github.io/ArkeneaProject/index.html" class="project-title">-view demo-</a>
@@ -58,7 +58,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 mobile-center">
                   <div class="flex-container">
                     <div class="flex-block flex-grow-1">
                         <a href="https://amyronenko.github.io/eventtro/index.html" class="project-title">-view demo-</a>
@@ -85,7 +85,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 mobile-center">
                   <div class="flex-container">
                     <div class="flex-block flex-grow-2">
                         <a href="https://amyronenko.github.io/FleeksBY/index.html" class="project-title">-view demo-</a>
@@ -122,7 +122,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 mobile-center">
                   <div class="flex-container">
                     <div class="flex-block flex-grow-1">
                         <a href="https://amyronenko.github.io/Monticello/index.html" class="project-title">-view demo-</a>
