--- a/FleeksBY/index.html
+++ b/FleeksBY/index.html
@@ -184,11 +184,11 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 center">
-            <p class="content red"><strong>Я потратил на этот макет: 10 часов</strong></p>
-          </div>
-        </div>
+        <!--<div class="row">-->
+          <!--<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 center">-->
+            <!--<p class="content red"><strong>Я потратил на этот макет: 10 часов</strong></p>-->
+          <!--</div>-->
+        <!--</div>-->
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <div class="border"></div>
