--- a/wpmotion_github/index.html
+++ b/wpmotion_github/index.html
@@ -177,10 +177,10 @@
                 <div class="col-6 col-lg-3 card__col">
                     <div class="card">
                         <div class="card__item">
-                            <div class="card__image-effects">
-                                <img class="card__image" src="./images/img1.png"
-                                     alt="">
-                            </div>
+                            <div><div class="card__image-effects">
+                                    <img class="card__image" src="./images/img1.png"
+                                         alt="">
+                                </div></div>
                         </div>
                         <div class="card__title">Mahmoud Baghagho</div>
                         <div class="card__subtitle">Senior UI Designer</div>
@@ -190,10 +190,10 @@
                 <div class="col-6 col-lg-3 card__col">
                     <div class="card">
                         <div class="card__item">
-                            <div class="card__image-effects">
-                                <img class="card__image" src="./images/img2.png"
-                                     alt="">
-                            </div>
+                            <div><div class="card__image-effects">
+                                    <img class="card__image" src="./images/img2.png"
+                                         alt="">
+                                </div></div>
                         </div>
                         <div class="card__title">Abd ElRahman</div>
                         <div class="card__subtitle">Senior App Developer</div>
@@ -203,10 +203,10 @@
                 <div class="col-6 col-lg-3 card__col">
                     <div class="card">
                         <div class="card__item">
-                            <div class="card__image-effects">
+                            <div><div class="card__image-effects">
                                 <img class="card__image" src="./images/img3.png"
                                      alt="">
-                            </div>
+                            </div></div>
                         </div>
                         <div class="card__title">Mostafa Amin</div>
                         <div class="card__subtitle">Senior Graphic Designer</div>
@@ -216,10 +216,10 @@
                 <div class="col-6 col-lg-3 card__col">
                     <div class="card">
                         <div class="card__item">
-                            <div class="card__image-effects">
+                            <div><div class="card__image-effects">
                                 <img class="card__image" src="./images/img4.png"
                                      alt="">
-                            </div>
+                            </div></div>
                         </div>
                         <div class="card__title">Ahmed Ali</div>
                         <div class="card__subtitle">Senior Web Developer</div>
